# Menu-Rest-Api

./: Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
menu/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
tests/: test_main.py
