[tool.poetry]
name = "ylab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.46"
fastapi-versioning = "^0.10.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.1"
httpx = "^0.23.3"
sqlalchemy-utils = "^0.39.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
